--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="the_inspiration_for_the_design_of_this_bag_comes_from_the_industrial_style_of_the_first_half_of_the_last_century_which_is_complemented_by_the_most_modern_features">The inspiration for the design of this bag comes from the industrial style of the first half of the last century, which is complemented by the most modern features.</string>
     <string name="_4">4</string>
     <string name="price_label">$%1$.2f</string>
+    <string name="_1f">%.1f</string>
 </resources>
