--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="product_image">Product image</string>
     <string name="_0_00">$56.60</string>
     <string name="soft_element_jack">Soft Element Jack</string>
-    <string name="discover_products">Discover Products</string>
+    <string name="discover_products">Discover \nProducts</string>
     <string name="settings">settings</string>
     <string name="sofas">Sofas</string>
     <string name="bag">Bag</string>
